display: fix build error GLib <2.26

https://bugs.freedesktop.org/show_bug.cgi?id=37443